services/predict-model/k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: django-container
        # Ton image Docker ECR
        # => tu as créé un repo "django-crypto"
        image: 131674823919.dkr.ecr.eu-west-3.amazonaws.com/django-crypto:latest

        ports:
          - containerPort: 8000
