services/predict-model/k8s/streamlit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      containers:
      - name: streamlit-container
        image: 131674823919.dkr.ecr.eu-west-3.amazonaws.com/dockerimage/streamlitcrypto:latest
        ports:
          - containerPort: 8501

        # Si besoin de variables d'env, tu peux en rajouter ici
        # env:
        #   - name: SOME_KEY
        #     value: "SOME_VALUE"
