services/predict-model/k8s/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django
  ports:
    - port: 8000       # Port exposé par le service dans le cluster
      targetPort: 8000 # Le containerPort
  type: ClusterIP
