services/predict-model/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-ingress
  annotations:
    # Indique qu'on veut un ALB internet-facing
    alb.ingress.kubernetes.io/scheme: internet-facing
    # On veut que le load balancer route directement (mode ip)
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8000
          - path: "/streamlit"
            pathType: Prefix
            backend:
              service:
                name: streamlit-service
                port:
                  number: 8501
